# SwimrankingsScraper

./: .gitignore  .readthedocs.yaml  .travis.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pr-tests.yml  publish.yml
docs/: conf.py  index.rst
docs/source/api/: athlete.rst  club.rst  meet.rst  meets.rst  result.rst  swimrankingsscraper.rst
swimrankingsscraper/: __init__.py  swimrankingsscraper.py
tests/: athlete_detail_page.html  athlete_detail_season_page.html  athlete_meets_page.html  club_athlete_page.html  meet_detail_page.html  meet_races_page.html  meet_races_splits_page.html  meets_page.html  result_detail_page.html  test_swimrankingsscraper.py  values_for_testing.py
