[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swimrankingsscraper"
version = "0.1.6"
description = "A scraper for swimrankings.net"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Bas Neeleman", email = "bas@neeleman-mail.nl" },
]
dependencies = [
  "beautifulsoup4",
  "lxml",
  "requests",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
dev = [
  "pytest==8.0.0",
]
docs = [
  "recommonmark",
  "sphinx",
  "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://swimrankingsscraper.readthedocs.io/"

[tool.setuptools.packages.find]
include = ["swimrankingsscraper"]
